ubiquity/chrome/skin/skins/experimental.css
/*
  =skin=
  @name Ubiquity Evolved
  @author Stephen Horlander and Aza Raskin
  @homepage http://azarask.in
  @email aza@mozilla.com
  @license MPL/LGPL/GPL
  =/skin=
*/

@-moz-document url(chrome://browser/content/browser.xul) {

#ubiquity-panel {
  position: relative;
  width: 810px;
  padding: 0px;
  background-color: transparent;
}

#ubiquity-frame {
  height: 555px;
  background-color: rgba(43,43,43,1);
  border: 1px solid #7E7E7E;
  -moz-border-radius: 10px;
}

/* The parent of the box for entering text */
#ubiquity-entry-container {
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 5px;
  -moz-border-radius-topleft: 10px;
  -moz-border-radius-topright: 10px;
  border: 1px solid #A6A6A6;
  border-bottom: 1px solid black;
  background-color: #999;
  background-image: url(chrome://ubiquity/skin/icons/cmd_entry_bg.png);
  background-position: top left;
  background-repeat: repeat-x;
}

/* Where text is entered */
#ubiquity-entry {
  -moz-appearance: none;
  background: none;
  border: none;
  font-size: 26px;
  color: black;
  width: 100%;
  font-family: Geneva, Tahoma, Verdana;
  text-shadow: #AFAFAF 0px 1px .2px;
}

#ubiquity-suggest-container {
  position: absolute;
  border-left: #232323;
  width: 280px;
  height: 500px;
  top: 56px;
  left: 0px;
  -moz-border-radius-bottomleft: 10px;
  background-color: rgba(61,61,61,1);
  background-image: url(chrome://ubiquity/skin/icons/suggestion_bd.png);
  background-position: top right;
  background-repeat: repeat-y;
}

#ubiquity-suggest {
  -moz-appearance: none;
  border: none;
  width: 300px;
  height: 500px;
  overflow: hidden;
}

#ubiquity-preview-container {
  position: absolute;
  left: 300px;
  top: 55px;
  border-top: 1px solid #333;
}

#ubiquity-preview {
  max-height: 490px;
}

#ubiquity-browser {
  width: 510px;
  height: 490px;
}

#ubiquity-help {
  padding: 0.6em;
  text-shadow: #000 1px 1px .5px;
  font-size: 12pt;
  color: #fff;
}

}

@-moz-document url(chrome://ubiquity/content/suggest.html) {

#suggestions {
  width: 280px;
  margin: 0;
  font-family: Geneva, Tahoma, Verdana;
  text-shadow: #333 0px 1px .2px;
  color: #fff;
}

/* below are the only Parser 2 debug changes*/

/*
.verb {
  border-bottom: 2px blue solid;
}
 
.prefix {
  border-bottom: 2px orange solid;
  font-weight: bold;
}
 
.argument {
  border-bottom: 2px orange solid;
}
 
.object {
  border-bottom: 2px black solid;
}

.inactive {
  color: #666;
}*/


/* parser 2 update */
.delimiter, .verb {
  font-weight: bold;
}

/*end Parser 2 version additions*/

.suggested {
  padding: 0px;
  font-size: 11pt;
  padding: 5px;  
  border: 1px solid rgba(162,162,162,1);
  border-right: 1px solid rgba(82,82,82,1);
  border-bottom: 1px solid rgba(82,82,82,1);
  font-family: Geneva, Tahoma, Verdana;
  text-shadow: #AFAFAF 0px 1px .2px;

  color: #000;
  background-color: rgba(128,128,128,1);
  min-height: 22px;
  overflow: hidden;

  cursor: pointer;
}

.hilited {
  border: none;
  margin-right: -30px;
  padding-right: 30px;
  z-index: 5000;
  background-image: url(chrome://ubiquity/skin/icons/selected_bg.png);
  background-color: transparent;
  background-position: top left;
  background-repeat: no-repeat;
}

.cmdicon {
  display: inline-block;
  width: 16px;
  margin-right: 0.3em;
}
.cmdicon img {
  vertical-align: middle;
  width: 16px;
  height: 16px;
}

.needarg {
  font-style: oblique;
  color: #AAA;
  text-shadow: none;
  font-size: 80%;
}
.needarg:before {
  content: "(";
}
.needarg:after {
  content: ")";
}

.hilited .needarg {
  font-style: oblique;
  color: #555;
  font-size: 80%;
}

.selection {
  padding: 2px;
  -moz-border-radius: 3px;
  display: inline-block;
  font-variant: small-caps;
  background-color: #BBB;
  color: #333;
  position: relative;
  top: -2px;
  font-size: 8pt;
  font-weight: normal;
  border: 1px solid #777;
  text-shadow: none;
}

}


/* Formatting for the Preview box */
@-moz-document url(resource://ubiquity/preview.html) {

body {
  margin: 0;
  padding: 5px 5px 0;
  background-color: rgba(43,43,43,1);
  color: #ffffff;
  font-family: Geneva, Tahoma, Verdana;
  text-shadow: #000 1px 1px .5px;
  font-size: 11pt;
}

a {
  color: #FFFFFF;
  text-decoration: underline;
  cursor: pointer;
}

a:hover {
  color: #A0A0A0;
}

a:link {
  color: #FFFFFF;
}

a:visited {
  color: #FFFFFF;
}

a:active {
  color: #A0A0A0;
}

.gresult {
  margin-bottom: 10px;
}

.gresult a {
  font-size: 14pt;
}
.gresult-url {
  font-size: x-small;
  color: #777;
}
.gresult-content {
  margin-right: 10px;
  font-size: small;
}

.error {
  color: #d44;
}

.default > .help:before {
  content: "How to use:";
  display: block;
  font-size: larger;
  font-weight: bolder;
}

.search-command .list {
  margin: 1ex 0;
}
.search-command kbd::before {
  content: "[";
}
.search-command kbd::after {
  content: "]";
}
.search-command .title {
  clear: both;
}
.search-command .thumbnail {
  float: left;
  margin: 5px 10px 0 0;
}
.search-command .preview {
  margin: 0 0 0.5ex 2em;
}

}

